[fix] inner span white space when overflow is hidden.

--- a/app/assets/styles/components/_link-hover-animation.css
+++ b/app/assets/styles/components/_link-hover-animation.css
@@ -19,6 +19,7 @@
 
   &__letter-wrapper {
     overflow: hidden;
+    vertical-align: top;
     display: inline-block;
   }
 
